<resources>
    <string name="app_name">MoviesManager</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="movies_manager">Movies Manager</string>
    <string name="year">Year:</string>
    <string name="producer">Producer:</string>
    <string name="duration_minutes">Duration (minutes):</string>
    <string name="genre">Genre:</string>
    <string name="watched">Watched:</string>
    <string name="logo">Logo:</string>
    <string name="movie_added">Movie added!</string>
    <string name="movie_details">%1$s, %2$s, %3$s</string>
    <string name="duration_min">Duration: %1$s min</string>
    <string name="is_watched">Watched: %1$s</string>
    <string name="note">★ %1$s/10</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="movie_deleted">Movie deleted!</string>
    <string name="movie_updated">Movie updated!</string>
    <string name="order_by">Order by:</string>
    <string name="name_bt">Name</string>
    <string name="note_bt">Note</string>
</resources>